Fix #13, zenodo metadata

--- a/release-notes/0.0.14.md
+++ b/release-notes/0.0.14.md
@@ -1,3 +1,4 @@
-# Release notes for pymetadata 0.0.13
+# Release notes for pymetadata 0.0.14
 
-- fixing slowdown due to large enums
+- Fix #9, enable check on all branches & macos tests
+- Simplified dependencies
