Fix #14, fix #13 updated kisao and rich logging

--- a/release-notes/0.0.14.md
+++ b/release-notes/0.0.14.md
@@ -2,3 +2,5 @@
 
 - Fix #9, enable check on all branches & macos tests
 - Simplified dependencies
+- Fix #13, zenodo metadata added
+- Fix #14, updated KISAO
