Fix #12, libchebi replaced with wsdl service

--- a/release-notes/0.0.14.md
+++ b/release-notes/0.0.14.md
@@ -4,3 +4,5 @@
 - Simplified dependencies
 - Fix #13, zenodo metadata added
 - Fix #14, updated KISAO
+- Fix #7, rich logging
+- Fix #12, removed libchebi dependency
