--- a/release-notes/0.0.23.md
+++ b/release-notes/0.0.23.md
@@ -1,4 +1,4 @@
-# Release notes for pymetadata 0.0.22
+# Release notes for pymetadata 0.0.23
 
 We are pleased to release the next version of pymetadata including the 
 following changes:
@@ -6,6 +6,6 @@ following changes:
 ## Features
 
 ## Fixes
-- relaxing jinja2 dependency for downstream packages
+- fixing omex exports
 
 Your pymetadata team
