updated omex format guessing

--- a/release-notes/0.1.0.md
+++ b/release-notes/0.1.0.md
@@ -1,9 +1,10 @@
-# Release notes for pymetadata 0.0.23
+# Release notes for pymetadata 0.1.0
 
 We are pleased to release the next version of pymetadata including the 
 following changes:
 
 ## Features
+- guess formats for omex files
 
 ## Fixes
 - fixing omex exports
