--- a/release-notes/0.1.0.md
+++ b/release-notes/0.1.0.md
@@ -5,6 +5,7 @@ following changes:
 
 ## Features
 - guess formats for omex files
+- Fix #17, compression support for zips
 
 ## Fixes
 - fixing omex exports
