Fix #21, master flag

--- a/release-notes/0.2.7.md
+++ b/release-notes/0.2.7.md
@@ -6,6 +6,8 @@ following changes:
 ## Features
 
 ## Fixes
-
+- Fix #22, write out master flag
+## Backwards compatibility
+- drop python 3.7 support due to end of life
 
 Your pymetadata team
