--- a/release-notes/0.2.8.md
+++ b/release-notes/0.2.8.md
@@ -5,6 +5,10 @@ following changes:
 
 ## Features
 - Fix #27, refactored test folder
+- Fix #28, ontology update
+  - Update KISAO to `2.31`
+  - Update SBO to `28:08:2021 03:13`
+  - Update ECO to `14:09:2021 16:54`
 
 ## Fixes
 
