Fix #25, handling encoding errors and formating

--- a/release-notes/0.2.8.md
+++ b/release-notes/0.2.8.md
@@ -9,6 +9,7 @@ following changes:
   - Update KISAO to `2.31`
   - Update SBO to `28:08:2021 03:13`
   - Update ECO to `14:09:2021 16:54`
+- Fix #25, handle combine archives with encoding errors gracefully
 
 ## Fixes
 
