--- a/release-notes/0.2.11.md
+++ b/release-notes/0.2.11.md
@@ -6,5 +6,6 @@ following changes:
 
 ## Features
 - Fix #32, support YAML format
+- Fix #33, more robust handling of metadata
 
 Your pymetadata team
