--- a/release-notes/0.2.11.md
+++ b/release-notes/0.2.11.md
@@ -7,5 +7,6 @@ following changes:
 ## Features
 - Fix #32, support YAML format
 - Fix #33, more robust handling of relative locations
+- Fix #34, updated dependency information
 
 Your pymetadata team
