--- a/release-notes/0.3.1.md
+++ b/release-notes/0.3.1.md
@@ -5,6 +5,7 @@ We are pleased to release the next version of pymetadata including the
 following changes:
 
 ## Features
-
+- minor fixes and integration for `pkdb_data`
+- added `DRON` namespace
 
 Your pymetadata team
