bugfixes for caching

--- a/release-notes/0.4.2.md
+++ b/release-notes/0.4.2.md
@@ -5,7 +5,9 @@ We are pleased to release the next version of pymetadata including the
 following changes:
 
 ## Features & fixes
-- drop legacy uuid (thanks @cheriimoya)
+- drop legacy uuid (thanks @cheriimoya #46)
+- cache dir only created if cache is activated (thanks @cheriimoya #45)
+- fix `stato` namespace issue #48
 - updated dependencies
 ```
 	depinfo>=1.7
