Fix #50, incorrect prefixes for archives fixed

--- a/release-notes/0.4.2.md
+++ b/release-notes/0.4.2.md
@@ -23,4 +23,5 @@ following changes:
 ```
 - updated ontologies SBO, ECO
 - updated documentation
+- fix incorrect identifiers.org prefixes for COMBINE archives (thanks @robertvi #50)
 Your pymetadata team
