Fix #55, support python 3.13, drop 3.9

--- a/release-notes/0.5.0.md
+++ b/release-notes/0.5.0.md
@@ -1,11 +1,10 @@
-# Release notes for pymetadata 0.4.4
+# Release notes for pymetadata 0.5.0
 ![pymetadata](https://github.com/matthiaskoenig/pymetadata/raw/develop/docs/images/favicon/pymetadata-100x100-300dpi.png)
 
 We are pleased to release the next version of pymetadata including the 
 following changes:
 
 ## Features & fixes
-- better handling of resources and cache
-- customization of cache path via setting `pymetadata.CACHE_PATH`
+- drop support py3.9, support py3.13
 
 Your pymetadata team
