--- a/release-notes/0.5.0.md
+++ b/release-notes/0.5.0.md
@@ -6,5 +6,6 @@ following changes:
 
 ## Features & fixes
 - drop support py3.9, support py3.13
+- more permissive licensing under MIT license
 
 Your pymetadata team
