--- a/release-notes/0.5.0.md
+++ b/release-notes/0.5.0.md
@@ -7,5 +7,6 @@ following changes:
 ## Features & fixes
 - drop support py3.9, support py3.13
 - more permissive licensing under MIT license
+- switch to uv, ruff, hatchling bump-my-version (Fix #53, Fix #54)
 
 Your pymetadata team
