--- a/release-notes/0.5.4.md
+++ b/release-notes/0.5.4.md
@@ -6,5 +6,6 @@ following changes:
 
 ## Features & fixes
 - bugfix for annotations with "/"
+- fixing webservices for Chebi 2.0 (#61)
 
 Your pymetadata team
