Fix #63, Fix #40, better compact identifiers and bioregistry.io support

--- a/release-notes/0.5.5.md
+++ b/release-notes/0.5.5.md
@@ -6,5 +6,7 @@ following changes:
 
 ## Features & fixes
 - remove custom namespaces (#62)
+- better support of compact identifiers.org identifiers (#63)
+- support of bioregistry.io as provider (#40)
 
 Your pymetadata team
