--- a/release-notes/0.5.5.md
+++ b/release-notes/0.5.5.md
@@ -8,5 +8,6 @@ following changes:
 - remove custom namespaces (#62)
 - better support of compact identifiers.org identifiers (#63)
 - support of bioregistry.io as provider (#40)
+- updated ECO ontology
 
 Your pymetadata team
