Fix #6, documentation created and hosted

--- a/release-notes/0.5.0.md
+++ b/release-notes/0.5.0.md
@@ -1,5 +1,5 @@
 # Release notes for pymetadata 0.5.0
-![pymetadata](https://github.com/matthiaskoenig/pymetadata/raw/develop/docs/images/favicon/pymetadata-100x100-300dpi.png)
+![pymetadata](./_docs/images/favicon/pymetadata-100x100-300dpi.png)
 
 We are pleased to release the next version of pymetadata including the
 following changes:
