--- a/release-notes/0.5.10.md
+++ b/release-notes/0.5.10.md
@@ -1,5 +1,5 @@
-# Release notes for pymetadata 0.5.9
-![pymetadata](https://github.com/matthiaskoenig/pymetadata/raw/develop/docs/images/favicon/pymetadata-100x100-300dpi.png)
+# Release notes for pymetadata 0.5.10
+![pymetadata](./_docs/images/favicon/pymetadata-100x100-300dpi.png)
 
 We are pleased to release the next version of pymetadata including the
 following changes:
